# backpack-intermediate

./: README.md  cabal.project
core/: core.cabal
final/: CHANGELOG.md  Main.hs  final.cabal
