cabal-version:      3.0
name:               core
version:            0.1.0.0
synopsis:

homepage:

license:            BSD-3-Clause
license-file:       LICENSE
author:             Daniel Diaz
maintainer:         diaz_carrete@yahoo.com

extra-source-files: CHANGELOG.md

library
    exposed-modules:  Core
    signatures:       Core.SomeSig
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   lib
    default-language: Haskell2010
